--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 main {
   display: flex;
   justify-content: space-around; 
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   gap: 30px;
 
   max-width: 1920px;
