--- a/src/pages/main/main.module.css
+++ b/src/pages/main/main.module.css
@@ -1,11 +1,9 @@
+.blok {
+  display: flex;
+}
 .main {
   display: flex;
   gap: 30px;
-  flex-wrap: wrap;
-  justify-content: space-around;
   max-width: 1920px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 320px;
-  padding-right: 320px;
+  margin: 0 auto;
 }
